--- a/css/layout/header.css
+++ b/css/layout/header.css
@@ -29,6 +29,9 @@
     top: 0;
     left: 0;
     z-index: 999;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 
     background-color: #fff;
     width: 100%;
@@ -65,9 +68,6 @@
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
 
-  .mobile-menu-nav {
-    margin-bottom: 168px;
-  }
   .mobile-menu-list-item:not(:last-child) {
     margin-bottom: 40px;
   }
@@ -87,10 +87,9 @@
 
   .mobile-menu-contacts {
     font-style: normal;
-  }
-  .mobile-menu-contacts-list {
     margin-bottom: 48px;
   }
+
   .mobile-menu-contacts-list-item:not(:last-child) {
     margin-bottom: 24px;
   }
@@ -167,7 +166,7 @@
     display: flex;
     align-items: center;
   }
-  .logo {
+  .logo-header {
     margin-right: 120px;
   }
   .nav-list {
@@ -225,7 +224,7 @@
 }
 
 @media screen and (min-width: 1158px) {
-  .logo {
+  .logo-header {
     margin-right: 76px;
   }
   .contacts-list {
