--- a/css/layout/hero.css
+++ b/css/layout/hero.css
@@ -6,7 +6,7 @@
       rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)
     ),
-    url(../../images/hero/mobile-bg.jpg);
+    url(../../css./images/hero/mobile-bg.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
