--- a/css/layout/hero.css
+++ b/css/layout/hero.css
@@ -19,7 +19,7 @@
         rgba(46, 47, 66, 0.7),
         rgba(46, 47, 66, 0.7)
       ),
-      url(../../images/hero/mobile-bg@2x.jpg);
+      url(../../css./images/hero/mobile-bg@2x.jpg);
   }
 }
 
@@ -29,7 +29,7 @@
         rgba(46, 47, 66, 0.7),
         rgba(46, 47, 66, 0.7)
       ),
-      url(../../images/hero/tablet-bg.jpg);
+      url(../../css./images/hero/tablet-bg.jpg);
   }
 }
 
@@ -41,7 +41,7 @@
         rgba(46, 47, 66, 0.7),
         rgba(46, 47, 66, 0.7)
       ),
-      url(../../images/hero/tablet-bg@2x.jpg);
+      url(../../css./images/hero/tablet-bg@2x.jpg);
   }
 }
 
@@ -51,7 +51,7 @@
         rgba(46, 47, 66, 0.7),
         rgba(46, 47, 66, 0.7)
       ),
-      url(../../images/hero/desktop-bg.jpg);
+      url(../../css./images/hero/desktop-bg.jpg);
   }
 }
 @media screen and (min-resolution: 192dpi) and (min-width: 1158px),
@@ -62,7 +62,7 @@
         rgba(46, 47, 66, 0.7),
         rgba(46, 47, 66, 0.7)
       ),
-      url(../../images/hero/desktop-bg@2x.jpg);
+      url(../../css./images/hero/desktop-bg@2x.jpg);
   }
 }
 
