--- a/css/layout/modal.css
+++ b/css/layout/modal.css
@@ -150,6 +150,8 @@
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.04em;
+  display: flex;
+  align-items: center;
 }
 .checkbox-container {
   width: 16px;
@@ -157,6 +159,8 @@
   display: inline-flex;
   justify-content: center;
   align-items: center;
+  flex-shrink: 0;
+  margin-right: 8px;
   fill: transparent;
   cursor: pointer;
   border: 1px solid rgba(46, 47, 66, 0.4);
