--- a/css/layout/footer.css
+++ b/css/layout/footer.css
@@ -64,18 +64,15 @@
   letter-spacing: 0.04em;
   border-radius: 4px;
   border: 1px solid var(--white);
-  opacity: 0.3;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
-  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .subscribe-form-input::placeholder {
   color: var(--white);
   opacity: 0.6;
 }
 .subscribe-form-input:focus {
-  border-color: var(--white);
-  opacity: 1;
+  border-color: var(--iris-color);
 }
 
 .subscribe-btn {
